@@ -146,6 +146,7 @@ presets["Full PyMods"] = {
         {type="group",      name="Flora and Fauna"},
         {type="item",       name="moondrop",       quantity=1},
         {type="item",       name="vrauks",         quantity=1},
+        {type="item",       name="digosaurus",     quantity=1},
         {type="item",       name="fawogae",        quantity=1},
         {type="item",       name="ralesias",       quantity=1},
         {type="item",       name="fish",           quantity=1},
@@ -167,6 +168,7 @@ presets["Full PyMods"] = {
         {type="item",       name="grod",           quantity=1},
         {type="item",       name="mukmoux",        quantity=1},
         {type="item",       name="navens",         quantity=1},
+        {type="item",       name="thikat",         quantity=1},
         {type="item",       name="bhoddos",        quantity=1},
         {type="item",       name="phagnot",        quantity=1},
         {type="item",       name="arthurian",      quantity=1},
@@ -192,6 +194,9 @@ presets["Full PyMods"] = {
         {type="item",       name="py-construction-robot-02",      quantity=1},
         {type="item",       name="c-pynobot-mk03",                quantity=1},
         {type="item",       name="construction-robot-ht",         quantity=1},
+        {type="item",       name="caravan",                       quantity=1},
+        {type="item",       name="flyavan",                       quantity=1},
+        {type="item",       name="ocula",                         quantity=1},
         {type="item",       name="crawdad",                       quantity=1},
         {type="item",       name="dingrido",                      quantity=1},
         {type="item",       name="qaavi",                         quantity=1},
@@ -317,6 +322,7 @@ presets["Full PyMods (minus Alternative Energy)"] = {
         {type="group",      name="Flora and Fauna"},
         {type="item",       name="moondrop",       quantity=1},
         {type="item",       name="vrauks",         quantity=1},
+        {type="item",       name="digosaurus",     quantity=1},
         {type="item",       name="fawogae",        quantity=1},
         {type="item",       name="ralesias",       quantity=1},
         {type="item",       name="fish",           quantity=1},
@@ -338,6 +344,7 @@ presets["Full PyMods (minus Alternative Energy)"] = {
         {type="item",       name="grod",           quantity=1},
         {type="item",       name="mukmoux",        quantity=1},
         {type="item",       name="navens",         quantity=1},
+        {type="item",       name="thikat",         quantity=1},
         {type="item",       name="bhoddos",        quantity=1},
         {type="item",       name="phagnot",        quantity=1},
         {type="item",       name="arthurian",      quantity=1},
@@ -359,6 +366,9 @@ presets["Full PyMods (minus Alternative Energy)"] = {
         {type="item",       name="py-construction-robot-01",      quantity=1},
         {type="item",       name="py-construction-robot-02",      quantity=1},
         {type="item",       name="construction-robot-ht",         quantity=1},
+        {type="item",       name="caravan",                       quantity=1},
+        {type="item",       name="flyavan",                       quantity=1},
+        {type="item",       name="ocula",                         quantity=1},
         {type="item",       name="crawdad",                       quantity=1},
         {type="item",       name="dingrido",                      quantity=1},
         {type="item",       name="qaavi",                         quantity=1},
